feat(): create virtual users (#20)
* Add transformers for user

* Add Room table

* Add user service for virtual users

* Fix tests

* Rename NumberRegistry to ChatUser

* Rename registration_type to user_type

* Checkstyle issues

* Invite virtual user

* Send messages as virtual user and write tests

* Fix checkstyle issues

* Improve test coverage