@@ -1,11 +1,10 @@
 package ca.levimiller.smsbridge.data.transformer.matrix;
 
-import ca.levimiller.smsbridge.data.model.Contact;
-import ca.levimiller.smsbridge.data.model.NumberRegistration;
-import ca.levimiller.smsbridge.data.model.NumberRegistrationType;
+import ca.levimiller.smsbridge.data.model.ChatUser;
+import ca.levimiller.smsbridge.data.model.ChatUserType;
 import ca.levimiller.smsbridge.data.transformer.RoomNameTransformer;
 import io.github.ma1uta.matrix.client.model.room.CreateRoomRequest;
-import java.util.Collections;
+import java.util.List;
 import javax.inject.Inject;
 import org.springframework.stereotype.Component;
 
@@ -23,18 +22,19 @@ public class MatrixRoomTransformer {
   /**
    * Transforms the contact numbers to a room.
    *
-   * @param chatNumber - chat service identifier
-   * @param smsContact - sms contact
+   * @param chatUser - chat service identifier
+   * @param smsUser - sms contact
    * @return - create room dto
    */
-  public CreateRoomRequest transform(NumberRegistration chatNumber, Contact smsContact) {
+  public CreateRoomRequest transform(ChatUser chatUser, ChatUser smsUser) {
     CreateRoomRequest roomRequest = new CreateRoomRequest();
     roomRequest.setPreset("trusted_private_chat");
-    roomRequest.setRoomAliasName(roomNameTransformer.transformEncoded(chatNumber, smsContact));
-    roomRequest.setName(roomNameTransformer.transformHumanReadable(chatNumber, smsContact));
+    roomRequest.setRoomAliasName(roomNameTransformer.transformEncoded(chatUser,
+        smsUser.getContact()));
+    roomRequest.setName(roomNameTransformer.transformHumanReadable(chatUser, smsUser.getContact()));
     roomRequest.setTopic("Sms Conversation");
-    roomRequest.setInvite(Collections.singletonList(chatNumber.getOwnerId()));
-    roomRequest.setDirect(NumberRegistrationType.USER.equals(chatNumber.getRegistrationType()));
+    roomRequest.setInvite(List.of(chatUser.getOwnerId(), smsUser.getOwnerId()));
+    roomRequest.setDirect(ChatUserType.USER.equals(chatUser.getUserType()));
     return roomRequest;
   }
 }
