@@ -3,6 +3,7 @@ package ca.levimiller.smsbridge.rest.impl;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -12,9 +13,10 @@ import ca.levimiller.smsbridge.data.model.Transaction;
 import ca.levimiller.smsbridge.service.MatrixEventService;
 import io.github.ma1uta.matrix.EmptyResponse;
 import io.github.ma1uta.matrix.application.model.TransactionRequest;
+import io.github.ma1uta.matrix.event.Event;
 import io.github.ma1uta.matrix.event.RoomAliases;
 import io.github.ma1uta.matrix.event.RoomMessage;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -34,6 +36,8 @@ class MatrixApiTest {
   private String transactionId;
   private Transaction transaction;
   private TransactionRequest transactionRequest;
+  private Event messageEvent;
+  private Event aliasEvent;
 
   @Autowired
   MatrixApiTest(MatrixApi matrixApi) {
@@ -48,9 +52,9 @@ class MatrixApiTest {
         .completed(true)
         .build();
     transactionRequest = new TransactionRequest();
-    transactionRequest.setEvents(Arrays.asList(
-        new RoomMessage<>(), new RoomAliases()
-    ));
+    messageEvent = new RoomMessage<>();
+    aliasEvent = new RoomAliases();
+    transactionRequest.setEvents(List.of(messageEvent, aliasEvent));
 
     when(transactionRepository.save(any())).thenReturn(transaction);
   }
@@ -92,6 +96,23 @@ class MatrixApiTest {
         .save(any());
     // no events processed
     verify(eventService, times(0)).process(any());
+  }
+
+  @Test
+  void testEventError() {
+    when(transactionRepository.findDistinctByTransactionId(transactionId))
+      .thenReturn(Optional.empty());
+    doThrow(new RuntimeException()).when(eventService).process(messageEvent);
+
+    matrixApi.transaction(transactionId, transactionRequest);
+
+    verify(eventService).process(aliasEvent);
+    // saved with completed
+    verify(transactionRepository, times(1))
+        .save(eq(Transaction.builder()
+            .transactionId(transactionId)
+            .completed(true)
+            .build()));
   }
 
   @Test
